# rustpaste

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: lib.rs  main.rs
