[package]
name = "rustpaste"
version = "0.1.0"
authors = ["Yağmur Oymak <yagmur.oymak@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
serde = "1.0.98"
futures = "0.1.28"
rand = "0.7.0"
actix-web-httpauth = "0.3.2"

[dev-dependencies]
tempfile = "3.1.0"
base64 = "0.10.1"
