[package]
name = "rustpaste"
version = "0.1.0"
authors = ["Yağmur Oymak <yagmur.oymak@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
serde = "1.0.104"
futures = "0.1.29"
rand = "0.7.3"
actix-web-httpauth = "0.3.2"
syntect = "3.3.0"

[dev-dependencies]
tempfile = "3.1.0"
base64 = "0.12.2"
